--- a/Tilted/Tilted.csproj
+++ b/Tilted/Tilted.csproj
@@ -84,4 +84,7 @@
     <Compile Include="TiltedComponent.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetPath)" "D:\Oculus\Software\Software\hyperbolic-magnetism-beat-saber\Plugins\Tilted.dll"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
